@@ -1,6 +1,9 @@
 Changes 0.9.2 -> 
 * On shutdown peers were sent a DPR with disconnect-cause='busy' instead of the
   (correct) 'rebooting' cause.
+* It is now possible to have a (small) grace period for making a clean
+  shutdown of connections waiting for reception of DPA. This has mostly
+  academic interest.
 
 Changes 0.9.1 -> 0.9.2
 * Reset TCP connection when non-diameter traffic is encountered (RFC3588
